añadido menu preferencias a PMUL/Buscaminas

--- a/PMUL/Buscaminas/res/layout/activity_main.xml
+++ b/PMUL/Buscaminas/res/layout/activity_main.xml
@@ -21,17 +21,20 @@
             android:layout_weight="0.02"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <EditText
-            android:id="@+id/editText1"
-            android:layout_width="57dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.00"
-            android:ems="10"
-            android:inputType="number"
-            android:text="5" />
-
         <Button
             android:id="@+id/btnReiniciar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/textTiempo"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.02"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <Button
+            android:id="@+id/ButtonBanderas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -44,7 +47,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/linearLayout1"
         android:orientation="horizontal" >
     </TableLayout>
 
