añadida actividad para el ranking (mejores 20 puntuaciones) mediante un adaptador (clase MyAdapter), actividad para el acerca de, añadidos sonidos al pulsar casillas y al explotar bombas, añadido dialogo para registrar nombre del jugador, tiempo y numero de minas para guardar en el ranking, centrado tablero y arreglada version land

--- a/PMUL/Buscaminas/res/menu/main.xml
+++ b/PMUL/Buscaminas/res/menu/main.xml
@@ -4,5 +4,13 @@
         android:id="@+id/preferencias"
         android:orderInCategory="100"
         android:title="@string/Preferencias"/>
+    <item
+        android:id="@+id/ranking"
+        android:orderInCategory="100"
+        android:title="@string/title_activity_ranking"/>
+    <item
+        android:id="@+id/about"
+        android:orderInCategory="100"
+        android:title="@string/title_activity_about"/>
 
 </menu>
