--- a/PMUL/Buscaminas/res/layout-port/activity_main.xml
+++ b/PMUL/Buscaminas/res/layout-port/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context=".MainActivity" >
 
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -37,16 +38,14 @@
             android:id="@+id/ButtonBanderas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
     </LinearLayout>
 
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
+        android:layout_below="@+id/linearLayout1"
+        android:layout_centerHorizontal="true"
         android:orientation="horizontal" >
     </TableLayout>
 
